@@ -109,11 +109,14 @@
       mData: "name",
       mRender: function(data, type, row) {
         buffer =  '';
-        if (row.is_master_mongo) {
+        if (row.mongo_state === "PRIMARY") {
             buffer = buffer + '<label class="label label-success">PRIMARY</label>&nbsp;&nbsp;<button class="btn btn-flat btn-xs btn-danger" id="stepdown" title="{% translate "Step Down" %}"><span><i class="fa fa-chevron-down"></i></span></button>';
         }
-        else if (row.addresses) {
+        else if (row.mongo_state === "SECONDARY") {
             buffer = buffer + '<label class="label label-warning">SECONDARY</label>';
+        }
+        else if (row.addresses) {
+            buffer = buffer + '<label class="label label-danger">UNKNOWN</label>';
         }
         else {
             buffer = 'Not configured';
@@ -195,6 +198,9 @@
               fnCallback(data);
           }
         })
+        .done( function( data ) {
+          apiResponse = true;
+        });
       },
       fnCreatedRow: function(nRow, aData, iDataIndex){
 
@@ -214,16 +220,13 @@
           $.ajax({
             type   : "GET",
             url    : url,
-            success: function(data, callback){
-                if (check_json_error(data))
-                  fnCallback(data);
-            }
           }).fail( function( jqXHR, textStatus ) {
-            $('#node_msg').html("<b style='color:red;'>{% translate 'API request failure: '%}" + textStatus + "</b></br>" +
-                                     "Status code : " + jqXHR.status + "</br>" +
-                                     "Message : " + jqXHR.statusText);
+            $('#node_msg').html("<b style='color:red;'>{% translate 'Failure: '%}" + textStatus + "</b></br>" +
+                                    "Status code : " + jqXHR.status + "</br>" +
+                                    "Message : " + jqXHR.responseJSON.error);
           }).done( function( msg ) {
-            $('#node_msg').html('<p>' + msg['message'] + '</p>')
+            $('#node_msg').html("<b style='color:green;'>{% translate 'Success: '%}</b><br>" +
+                                      "node " + id + " stepped down" );
           });
         });
 
@@ -239,10 +242,6 @@
           $.ajax({
             type   : "GET",
             url    : url,
-            success: function(data, callback){
-                if (check_json_error(data))
-                  fnCallback(data);
-            }
           }).fail( function( jqXHR, textStatus ) {
             $('#node_msg').html("<b style='color:red;'>{% translate 'API request failure: '%}" + textStatus + "</b></br>" +
                                      "Status code : " + jqXHR.status + "</br>" +
@@ -264,10 +263,6 @@
           $.ajax({
             type   : "GET",
             url    : url,
-            success: function(data, callback){
-                if (check_json_error(data))
-                  fnCallback(data);
-            }
           }).fail( function( jqXHR, textStatus ) {
             $('#node_msg').html("<b style='color:red;'>{% translate 'API request failure: '%}" + textStatus + "</b></br>" +
                                      "Status code : " + jqXHR.status + "</br>" +
@@ -285,5 +280,13 @@
         });
       }
   });
+
+  let apiResponse = true;
+  setInterval( function() {
+    if(apiResponse == true) {
+      apiResponse = false;
+      cluster_table.fnDraw(false);
+    }
+  }, 10000);
 
 {% endblock %}
