@@ -24,7 +24,7 @@ __doc__ = 'System Utils Database Toolkit'
 
 
 from pymongo import MongoClient, ReadPreference
-from pymongo.errors import OperationFailure
+from pymongo.errors import OperationFailure, AutoReconnect
 from toolkit.network.network import get_hostname
 from django.conf import settings
 from re import search as re_search
@@ -231,6 +231,13 @@ class MongoBase:
     def connect_primary(self):
         return self.connect(self.get_primary())
 
+    def repl_state(self):
+        try:
+            return self.db.admin.command("replSetGetStatus")['members']
+        except Exception as e:
+            logger.error("repl_state: Error while getting MongoDB replication info: {}".format(str(e)), exc_info=1)
+            return ""
+
     def repl_initiate(self):
         """
             ADD ourself to a local Vulture replicaset (bootstrap process)
@@ -374,13 +381,15 @@ class MongoBase:
 
         This command MUST be executed on a PRIMARY node
 
-        :return: Tuple (status, message) 
+        :return: Tuple (status, message)
         """
 
         self.connect_primary()
         try:
             logger.info("MongoBase::replSetStepDown: calling replSetStepDown")
             return True, self.db.admin.command({"replSetStepDown": 60})
+        except AutoReconnect:
+            return True, "Node stepped down"
         except Exception as e:
             logger.error("MongoBase::replSetStepDown: Error during mongoDB replSetStepDown: {}".format(str(e)))
             return False, str(e)
@@ -391,7 +400,7 @@ class MongoBase:
 
         This command MUST be executed on a PRIMARY node
 
-        :return: Tuple (status, message) 
+        :return: Tuple (status, message)
         """
         self.connect_primary()
         # Try to create index
