@@ -13,6 +13,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [FORCEPOINT] Fix update lock to prevent multiprocess
 - [API_PARSER] [FORCEPOINT] Use a safer alternative to XML decoding
 - [WORKFLOW] Trigger build_conf on various changes
+- [GUI] [NODES] Wrong state of mongo replica when a node is down
+- [GUI] [NODES] Correctly print result when stepping down a Mongodb node
 ### Changed
 - [API_PARSER] [VECTRA] Store current access token to avoid re-generating it every time
 
